k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pipeline-demo
  name: pipeline-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipeline-demo
  template:
    metadata:
      labels:
        app: pipeline-demo
    spec:
      containers:
        - image: quay.io/vanithasathish/oc-pipeline-demo-3:latest
          imagePullPolicy: Always
          name: pipeline-demo
          ports:
            - containerPort: 8080
              protocol: TCP
