k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pipeline-demo
  name: pipeline-demo
spec:
  to:
    kind: Service
    name: pipeline-demo
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
