k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipeline-demo
  name: pipeline-demo
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: pipeline-demo

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
  name: pipeline-demo
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
  to:
    kind: Service
    name: pipeline-demo
